NLP TP's/texts/robotics/robotics.stackexchange_0000052416.txt
Q:

build ROS package with ICC or link ICC compiled file to package

Hi
I made a custom ros package that i'm trying to build using the intel compiler. I followed the instructions in the wiki rosbuild (6.1) but that doesn't seem to work. I'm new to cmake and makelists and ros too.
If I include the compiler code at the beginning of the file then I get a boost error otherwise it just seems to loop over and over.
I also tried running make in the package folder. I've pasted part of the errors here.

/usr/include/boost/math/policies/policy.hpp(388): error: nontype "boost::math::policies::detail::is_valid_policy::value [with T=A2]" is not a type name
BOOST_STATIC_ASSERT(::boost::math::policies::detail::is_valid_policy::value);
^

/usr/include/boost/math/policies/policy.hpp(388): error: expected a type specifier
BOOST_STATIC_ASSERT(::boost::math::policies::detail::is_valid_policy::value);
^

/usr/include/boost/math/policies/policy.hpp(388): error: invalid redeclaration of member function "boost::math::policies::policy<A1, A2, A3, A4, A5, A6, A7, A8, A9, A10, A11, A12, A13>::static_assert(, )" (declared at line 387)
BOOST_STATIC_ASSERT(::boost::math::policies::detail::is_valid_policy::value);
^

What I really need to do is use a function (foo()) that has been compiled with a an intel compiler in my ros package. If I like the .c file for that function is rosbuild_add_executable I'm rebuilding the file with gcc. If I use the enable_language function and link the .s file in rosbuild_add_executable I still get errors.
When linking the .s file I added
[code] extern "C" {int foo();} [/code]
to my .cpp
I got the following errors then

Building CXX object CMakeFiles/pleaseWork.dir/src/environmentSpecifics.cpp.o
Building CXX object CMakeFiles/pleaseWork.dir/src/myDwa.cpp.o
Building CXX object CMakeFiles/pleaseWork.dir/src/getRosParameters.cpp.o
Building ASM-ATT object CMakeFiles/pleaseWork.dir/src/dwmonitorc.s.o
/usr/bin/as: unrecognized option '-OS_PACKAGE_NAME="landshark_dwaICCIntegration"'
make[3]: *** [CMakeFiles/pleaseWork.dir/src/dwmonitorc.s.o] Error 1

(I'm sorry its called pleaseWork .. I just needed it to work)
What is the best way to go about this. Help please.
Thanks.

Originally posted by canatan on ROS Answers with karma: 41 on 2013-06-30
Post score: 0

A:

So I ended up generating the .o file using icc and linking it using cmake to link it.
I followed
stackoverflow.com/questions/14776463/compile-and-add-object-file-from-binary-with-cmake/14873818#14873818
which totally worked. replacing add_library with rosbuild_add_library and so on.

Originally posted by canatan with karma: 41 on 2013-07-11
This answer was ACCEPTED on the original site
Post score: 0

